tests/ui/lang-items/missing-copy-lang-item-issue-19660.stderr
error: requires `copy` lang_item
  --> $DIR/missing-copy-lang-item-issue-19660.rs:12:5
   |
LL |     argc
   |     ^^^^

error: aborting due to 1 previous error

